--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -1,13 +1,13 @@
 <div class="container mt-4">
-    <h2>Detalle del Usuario</h2>
-    <div class="card">
+    <h2 class="m-auto">Detalles del Usuario</h2>
+    <div class="card shadow p3 col-12 col-md-3 mt-3">
       <img [src]="miUser.image" class="card-img-top" alt="{{ miUser.first_name }}">
       <div class="card-body">
         <h5 class="card-title">{{ miUser.first_name }} {{ miUser.last_name }}</h5>
         <p class="card-text">Email: {{ miUser.email }}</p>
         <p class="card-text">Username: {{ miUser.username }}</p>
         <app-botonera [_id]="miUser._id" [parent]="'view'"></app-botonera>
-        <a routerLink="/home" class="btn btn-secondary">Volver al Listado</a>
+        <a [routerLink]="['/home']" class="btn btn-secondary">Volver al Listado</a>
       </div>
     </div>
   </div>
