--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,9 @@
-<div class="d-flex flex-column min-vh-100">
+<div>
   <app-header></app-header>
 
-    <main class="container my-2 flex-grow-1"> 
+    <main> 
       <router-outlet></router-outlet>
     </main>
-
 
   <app-footer></app-footer>
   </div>
